--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -33,7 +33,7 @@
                 <a href="<%- url_for(page.link) %>" target="_blank"><%= page.title %></a>
             </h2>
         
-        <% } else if (page.title) { %>
+        <% } else { %>
         
             <h2 class="content-title">
                 <a href="<%- url_for(page.path) %>"><%= page.title %></a>
