--- a/source/css/_base.styl
+++ b/source/css/_base.styl
@@ -54,10 +54,10 @@ hr
     -moz-box-sizing: content-box
     box-sizing: content-box
     height: 0
-    margin-top: 40px;
-    margin-bottom: 40px;
-    border: 0;
-    border-top: 1px solid #eeeeee;
+    margin-top: 40px
+    margin-bottom: 40px
+    border: 0
+    border-top: 1px solid #eee
 
 dt
     font-weight: 700
